--- a/data/projects.yml
+++ b/data/projects.yml
@@ -1,6 +1,6 @@
 - name: Substracked
   description: Substracked is a Ruby on Rails web application aimed at saving users' money by tracking their online subscriptions.
-  image: projects/placeholder.png
+  image: projects/substracked.png
   url: https://www.substracked.com/
   techs:
     - Ruby on Rails
@@ -8,14 +8,14 @@
 
 - name: Substracked chrome extension
   description: Chrome extension for Substracked to add subscription from external site.
-  image: projects/placeholder.png
+  image: projects/subs-chrome.png
   url: https://github.com/clementckmc/substracked-chrome
   techs:
     - Javascript
 
 - name: Rent-a-retro
   description: Rent-a-retro is a Ruby on Rails marketplace web application allowing users to lend and rent retro video games.
-  image: projects/placeholder.png
+  image: projects/Rent-a-retro.png
   url: https://rent-a-retro.herokuapp.com/
   techs:
     - Ruby on Rails
@@ -23,22 +23,22 @@
 
 - name: Premier League Info and Forum Site
   description: A Django web app that presents Premier League table and fixtures etc by retreiving data from football-API. It also includes a discussion forum.
-  image: projects/placeholder.png
+  image: projects/PLinfo.png
   url: https://premier-league-info-forum.herokuapp.com/
   techs:
     - Django
     - Javascript
 
 - name: Movie Watchlist
-  description: Decent description of the app
-  image: projects/placeholder.png
+  description: A web application showing users' movie watchlist and allow users to add their favorite movies in the list.
+  image: projects/watchlist.png
   url: https://clementckmc-rails-watch-list.herokuapp.com/
   techs:
     - Ruby on Rails
     - StimulusJS
 
 - name: Choco Bittersweet
-  description: Decent description of the app
+  description: A web application storing users' favorite chocolate recipes and their ingredients. Users can also add and review recipes.
   image: projects/placeholder.png
   url: https://choco-bittersweet.herokuapp.com/
   techs:
@@ -47,7 +47,7 @@
 
 - name: Slack copycat
   description: A copycat of Slack which can send and get messages through wagon-chat API.
-  image: projects/placeholder.png
+  image: projects/slack.png
   url: https://github.com/clementckmc/slack-copycat
   techs:
     - Javascript
